--- a/_pages/Code/Python/페르미-디랙.md
+++ b/_pages/Code/Python/페르미-디랙.md
@@ -2,6 +2,8 @@
 title: "페르미-디랙 분포확률함수를 3차원 그래프로 그려보자"
 date: "2025-01-05"
 thumbnail: "/assets/img/Code/Python/페르미-디랙.png"
+tags:
+    - Python
 ---
 
 ![](/assets/img/Code/Python/페르미-디랙.png)
