--- a/_pages/Web/서버에 무작위로 파일을 요청하는 이유.md
+++ b/_pages/Web/서버에 무작위로 파일을 요청하는 이유.md
@@ -1,7 +1,7 @@
 ---
 title: "웹서버에 수상한 요청들이 쏟아져 들어온다면?"
 tags:
-    - Web
+    - "Web"
 date: "2025-01-05"
 thumbnail: "/assets/img/Web/api_로그%20(2).png"
 ---
