--- a/_pages/Code/C++/레퍼런스.md
+++ b/_pages/Code/C++/레퍼런스.md
@@ -1,9 +1,9 @@
 ---
 title: "C++ 레퍼런스와 성능 향상"
 date: "2025-01-05"
+# tags:
+# 	- "C++"
 thumbnail: "/assets/img/Code/C++/레퍼런스%20(2).png"
-tags:
-	- C++
 ---
 
 # 문제점
