--- a/_pages/Code/C++/레퍼런스.md
+++ b/_pages/Code/C++/레퍼런스.md
@@ -1,8 +1,8 @@
 ---
-title: "C++ 레퍼런스와 성능 향상"
+title: "C++ 레퍼런스가 성능 향상에 미치는 영향"
 date: "2025-01-05"
-# tags:
-# 	- "C++"
+tags:
+    - "C++"
 thumbnail: "/assets/img/Code/C++/레퍼런스%20(2).png"
 ---
 
