--- a/_pages/Web/웹서버 콘솔에 설정, 관리자 파일 요청이 들어오는 경우.md
+++ b/_pages/Web/웹서버 콘솔에 설정, 관리자 파일 요청이 들어오는 경우.md
@@ -1,5 +1,5 @@
 ---
-title: "웹서버에 수상한 요청들이 쏟아져 들어온다면?"
+title: "웹서버 콘솔에 설정, 관리자 파일 요청이 들어오는 경우"
 tags:
     - "Web"
 date: "2025-01-05"
@@ -15,10 +15,15 @@ thumbnail: "/assets/img/Web/api_로그%20(2).png"
 ## 404 Not found
 요청한 파일들을 살펴보곤 소름이 끼쳤다. 일반적으로는 요청할 일이 절대 없는 웹서버의 설정, 일반적으로 API 키가 담겨있을 환경 변수 파일, 관리자용 파일 등 악의적인 해킹을 목적으로 한 요청들이였기 때문이다. 
 
-## "Where this is normal"
+# 어떻게 대처해야 하는가?
+---
+nginx의 방화벽 설정을 점검해야 할 것 같다. 또 루트 폴더에서 보안 정보들이 담긴 파일들을 최대한 옮겨놓거나 하는 식으로 유출의 가능성을 피해야 한다.
+
+# "Where this is normal"
+---
 
 ![](/assets/img/Web/api_로그%20(3).png){:class="image-md"}
 
-> "Welcome to the Internet where this is normal"
+> "여러 봇들과 크롤러들이 항상 취약점과 보안 정보들을 공격하는 인터넷의 세상에 오신 것을 환영합니다."
 
 역시 인터넷의 세계는 방대하고 무서운 것 같다.
